# python-aiproviders

./: .gitignore  README.md
django-aiproviders/: pyproject.toml
django-aiproviders/docs/: AI.md
django-aiproviders/src/djaiproviders/migrations/: 0001_initial.py
django-aiproviders/src/django_aiproviders/: __init__.py  apps.py  urls.py
django-aiproviders/src/django_aiproviders/admin/: __init__.py  handle.py  provider.py
django-aiproviders/src/django_aiproviders/forms/: handle.py
django-aiproviders/src/django_aiproviders/managers/: __init__.py  provider.py
django-aiproviders/src/django_aiproviders/migrations/: 0001_initial.py
django-aiproviders/tests/: settings.py  urls.py
python-aiproviders/: README.md  pyproject.toml
python-aiproviders/docs/: AI.md  README.md  agent.md  development.md  purpose.md  structure.md
python-aiproviders/src/aiproviders/: __init__.py  helpers.py
python-aiproviders/src/aiproviders/commands/: __init__.py  models.py  prompt.py
python-aiproviders/src/aiproviders/providers/: __init__.py  anthropic.py  google.py  meta.py  mistral.py  openai.py  scaleway.py
python-aiproviders/src/aiproviders/providers/actions/: action.json  analyze.json  chat.json  classify.json  detect.json  enhance.json  extract.json  generate.json  optimize.json  planner.json  summarize.json  translate.json  validate.json  verify.json
python-aiproviders/src/aiproviders/providers/formats/: csv.json  html.json  json.json  text.json  xml.json
python-aiproviders/src/aiproviders/providers/schemas/: action.schema.json  analyze.schema.json  base_action.schema.json  chat.schema.json  classify.schema.json  detect.schema.json  enhance.schema.json  extract.schema.json  generate.schema.json  optimize.schema.json  planner.schema.json  summarize.schema.json  tool.schema.json  translate.schema.json  validate.schema.json  verify.schema.json
src/aiproviders/: cli.py
(+13 files in other folders)
