[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiproviders"
version = "0.1.0"
description = "Python library for AI provider management. Provides a unified interface to multiple AI providers (OpenAI, Anthropic, Google, Mistral, Meta, etc.) using ProviderKit."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Octolo", email = "dev@octolo.tech"}
]
keywords = [
  "ai",
  "llm",
  "openai",
  "anthropic",
  "mistral",
  "google",
  "meta",
  "provider",
  "python",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "clicommands>=0.1.0",
  "providerkit",
  "python-dotenv>=1.0.0",
]

[project.scripts]
aiproviders = "aiproviders.cli:main"

[project.urls]
Homepage = "https://github.com/hicinformatic/python-aiproviders"
Repository = "https://github.com/hicinformatic/python-aiproviders"
Documentation = "https://github.com/hicinformatic/python-aiproviders/tree/main/python-aiproviders#readme"
Issues = "https://github.com/hicinformatic/python-aiproviders/issues"

[tool.setuptools]
license-files = ["../LICENSE"]
package-data = {aiproviders = [".commands.json"]}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

